--- a/package.json
+++ b/package.json
@@ -15,16 +15,29 @@
     "homepage": "https://github.com/dobernike/my_finances#readme",
     "scripts": {
         "dev": "cross-env NODE_ENV=development webpack --mode development",
-        "build": "cross-env NODE_ENV=production webpack --mode production",
+        "build": "yarn build:legacy && yarn build:modern",
+        "build:legacy": "cross-env NODE_ENV=production && BROWSERSLIST_ENV=legacy webpack --mode production",
+        "build:modern": "cross-env NODE_ENV=production && BROWSERSLIST_ENV=modern webpack --mode production",
         "watch": "cross-env NODE_ENV=development webpack --mode development --watch",
-        "start": "cross-env NODE_ENV=development webpack-dev-server --mode development --open",
+        "start": "cross-env NODE_ENV=development && BROWSERSLIST_ENV=modern webpack-dev-server --mode development --open",
+        "start:legacy": "cross-env NODE_ENV=development && BROWSERSLIST_ENV=legacy webpack-dev-server --mode development --open",
         "stats": "webpack --json > stats.json && webpack-bundle-analyzer stats.json",
         "test": "jest --verbose --passWithNoTests",
         "lint": "eslint --debug src/",
         "lint:write": "eslint --fix ./src/**/*.tsx",
         "prettier": "prettier --write src/**/*.js"
     },
-    "browserslist": "> 0.25%, not dead",
+    "browserslist": {
+        "legacy": [
+            "> 1%",
+            "ie 11"
+        ],
+        "modern": [
+            "last 1 Chrome version",
+            "last 1 Firefox version",
+            "last 1 Safari version"
+        ]
+    },
     "husky": {
         "hooks": {
             "pre-commit": "lint-staged",
@@ -53,6 +66,7 @@
         "@babel/core": "^7.6.0",
         "@babel/plugin-proposal-class-properties": "^7.5.5",
         "@babel/preset-env": "^7.6.0",
+        "@babel/preset-modules": "^0.1.3",
         "@babel/preset-react": "^7.0.0",
         "@babel/preset-typescript": "^7.6.0",
         "@testing-library/jest-dom": "^5.1.0",
@@ -104,13 +118,14 @@
         "redux-devtools-extension": "^2.13.8",
         "source-map": "^0.7.3",
         "style-loader": "^1.0.0",
+        "terser-webpack-plugin": "^2.3.4",
         "thread-loader": "^2.1.3",
         "typed-css-modules-webpack-plugin": "^0.1.3",
         "typescript": "^3.7.5",
-        "uglifyjs-webpack-plugin": "^2.2.0",
         "webpack": "^4.41.6",
         "webpack-bundle-analyzer": "^3.6.0",
         "webpack-cli": "^3.3.9",
-        "webpack-dev-server": "^3.8.2"
+        "webpack-dev-server": "^3.8.2",
+        "whatwg-fetch": "^3.0.0"
     }
 }
