--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,20 +1,20 @@
 {
-  "compilerOptions": {
-    "allowSyntheticDefaultImports": true,
-    "jsx": "react",
-    "module": "amd",
-    "noImplicitAny": true,
-    "outDir": "./dist/",
-    "preserveConstEnums": true,
-    "removeComments": true,
-    "sourceMap": true,
-    "target": "es6",
-    "moduleResolution": "node",
-    "strict": true,
-    "alwaysStrict": true,
-    "strictNullChecks": false,
-    "downlevelIteration": true
-  },
-  "include": ["./src/"],
-  "exclude": ["node_modules"]
+    "compilerOptions": {
+        "allowSyntheticDefaultImports": true,
+        "jsx": "react",
+        "module": "ESNext",
+        "noImplicitAny": true,
+        "outDir": "./dist/",
+        "preserveConstEnums": true,
+        "removeComments": true,
+        "sourceMap": true,
+        "target": "ESNext",
+        "moduleResolution": "node",
+        "strict": true,
+        "alwaysStrict": true,
+        "strictNullChecks": false,
+        "downlevelIteration": true
+    },
+    "include": ["./src/"],
+    "exclude": ["node_modules"]
 }
