--- a/package.json
+++ b/package.json
@@ -16,15 +16,15 @@
     "scripts": {
         "dev": "cross-env NODE_ENV=development webpack --mode development",
         "build": "yarn build:legacy && yarn build:modern",
-        "build:legacy": "cross-env NODE_ENV=production && BROWSERSLIST_ENV=legacy webpack --mode production",
-        "build:modern": "cross-env NODE_ENV=production && BROWSERSLIST_ENV=modern webpack --mode production",
+        "build:legacy": "cross-env NODE_ENV=production BROWSERSLIST_ENV=legacy webpack --mode production",
+        "build:modern": "cross-env NODE_ENV=production BROWSERSLIST_ENV=modern webpack --mode production",
         "watch": "cross-env NODE_ENV=development webpack --mode development --watch",
-        "start": "cross-env NODE_ENV=development && BROWSERSLIST_ENV=modern webpack-dev-server --mode development --open",
-        "start:legacy": "cross-env NODE_ENV=development && BROWSERSLIST_ENV=legacy webpack-dev-server --mode development --open",
+        "start": "cross-env NODE_ENV=development BROWSERSLIST_ENV=modern webpack-dev-server --mode development --open",
+        "start:legacy": "cross-env NODE_ENV=development BROWSERSLIST_ENV=legacy webpack-dev-server --mode development --open",
         "stats": "webpack --json > stats.json && webpack-bundle-analyzer stats.json",
         "test": "jest --verbose --passWithNoTests",
-        "lint": "eslint --debug src/",
-        "lint:write": "eslint --fix ./src/**/*.tsx",
+        "lint": "yarn lint:js",
+        "lint:js": "eslint --fix ./src/**/*.tsx",
         "prettier": "prettier --write src/**/*.js"
     },
     "browserslist": {
@@ -41,22 +41,24 @@
     "husky": {
         "hooks": {
             "pre-commit": "lint-staged",
-            "pre-push": "npm test"
+            "pre-push": "yarn test"
         }
     },
     "lint-staged": {
         "*.(js|jsx)": [
-            "npm run lint:write",
+            "yarn lint",
             "git add"
         ]
     },
     "dependencies": {
         "@blueprintjs/core": "^3.23.1",
-        "@reach/router": "^1.3.0",
+        "@reach/router": "^1.3.1",
         "@yarnpkg/pnpify": "^2.0.0-rc.18",
         "babel-polyfill": "^6.26.0",
+        "bootstrap": "^4.4.1",
         "normalize.css": "^8.0.1",
         "react": "^16.12.0",
+        "react-bootstrap": "^1.0.0-beta.16",
         "react-dom": "^16.12.0",
         "react-redux": "^7.1.3",
         "redux": "^4.0.5",
@@ -72,13 +74,16 @@
         "@testing-library/jest-dom": "^5.1.0",
         "@testing-library/react": "^9.4.0",
         "@types/classnames": "^2.2.9",
-        "@types/jest": "^25.1.1",
+        "@types/jest": "^25.1.3",
         "@types/node": "^13.7.0",
+        "@types/reach__router": "^1.3.0",
         "@types/react": "^16.9.5",
         "@types/react-dom": "^16.9.1",
         "@types/react-redux": "^7.1.7",
+        "@types/react-router-dom": "^5.1.3",
         "autoprefixer": "^9.6.1",
         "babel-eslint": "^10.0.3",
+        "babel-jest": "^25.1.0",
         "babel-loader": "^8.0.6",
         "babel-plugin-react-css-modules": "^5.2.6",
         "cache-loader": "^4.1.0",
@@ -111,6 +116,7 @@
         "optimize-css-assets-webpack-plugin": "^5.0.3",
         "pnp-webpack-plugin": "^1.6.0",
         "postcss": "^7.0.26",
+        "postcss-custom-media": "^7.0.8",
         "postcss-loader": "^3.0.0",
         "postcss-nested": "^4.1.2",
         "prettier": "^1.18.2",
@@ -120,7 +126,7 @@
         "style-loader": "^1.0.0",
         "terser-webpack-plugin": "^2.3.4",
         "thread-loader": "^2.1.3",
-        "typed-css-modules-webpack-plugin": "^0.1.3",
+        "ts-jest": "^25.2.1",
         "typescript": "^3.7.5",
         "webpack": "^4.41.6",
         "webpack-bundle-analyzer": "^3.6.0",
