--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
         "start": "cross-env NODE_ENV=development BROWSERSLIST_ENV=modern webpack-dev-server --mode development --open",
         "start:legacy": "cross-env NODE_ENV=development BROWSERSLIST_ENV=legacy webpack-dev-server --mode development --open",
         "stats": "webpack --json > stats.json && webpack-bundle-analyzer stats.json",
-        "test": "jest --verbose --passWithNoTests",
+        "test": "yarn jest:coverage && yarn lint",
+        "jest": "jest --verbose --passWithNoTests",
+        "jest:watch": "yarn jest --watchAll",
+        "jest:coverage": "yarn jest --env=jsdom --coverage",
         "lint": "yarn lint:js",
-        "lint:js": "eslint --fix ./src/**/*.tsx",
+        "lint:js": "eslint './src/**/*.{js,ts,tsx}' --quiet --fix",
         "prettier": "prettier --write src/**/*.js"
     },
     "browserslist": {
@@ -41,7 +44,7 @@
     "husky": {
         "hooks": {
             "pre-commit": "lint-staged",
-            "pre-push": "yarn test"
+            "pre-push": "yarn jest"
         }
     },
     "lint-staged": {
@@ -89,7 +92,9 @@
         "cache-loader": "^4.1.0",
         "classnames": "^2.2.6",
         "clean-webpack-plugin": "^3.0.0",
+        "codecov.io": "^0.1.6",
         "copy-webpack-plugin": "^5.1.1",
+        "coveralls": "^3.0.9",
         "cross-env": "^7.0.0",
         "css-loader": "^3.2.0",
         "eslint": "^6.8.0",
