--- a/.travis.yml
+++ b/.travis.yml
@@ -16,3 +16,12 @@ branches:
 after_success:
     - cat ./coverage/lcov.info | ./node_modules/codecov.io/bin/codecov.io.js
     - cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js
+
+before_install: # if "install" is overridden
+  # Repo for Yarn
+  - sudo apt-key adv --fetch-keys http://dl.yarnpkg.com/debian/pubkey.gpg
+  - echo "deb http://dl.yarnpkg.com/debian/ stable main" | sudo tee /etc/apt/sources.list.d/yarn.list
+  - sudo apt-get update -qq
+  - sudo apt-get install -y -qq yarn
+cache:
+  yarn: true
