--- a/package.json
+++ b/package.json
@@ -15,17 +15,22 @@
     "homepage": "https://github.com/dobernike/my_finances#readme",
     "scripts": {
         "dev": "cross-env NODE_ENV=development webpack --mode development",
-        "build": "yarn build:legacy && yarn build:modern",
+        "build": "npm run build:legacy && npm run build:modern",
         "build:legacy": "cross-env NODE_ENV=production BROWSERSLIST_ENV=legacy webpack --mode production",
         "build:modern": "cross-env NODE_ENV=production BROWSERSLIST_ENV=modern webpack --mode production",
         "watch": "cross-env NODE_ENV=development webpack --mode development --watch",
         "start": "cross-env NODE_ENV=development BROWSERSLIST_ENV=modern webpack-dev-server --mode development --open",
         "start:legacy": "cross-env NODE_ENV=development BROWSERSLIST_ENV=legacy webpack-dev-server --mode development --open",
         "stats": "webpack --json > stats.json && webpack-bundle-analyzer stats.json",
-        "test": "jest --verbose --passWithNoTests",
-        "lint": "yarn lint:js",
-        "lint:js": "eslint --fix ./src/**/*.tsx",
-        "prettier": "prettier --write src/**/*.js"
+        "test": "npm run jest:coverage && npm run lint",
+        "jest": "jest --verbose --passWithNoTests",
+        "jest:watch": "npm run jest --watchAll",
+        "jest:coverage": "npm run jest --env=jsdom --coverage",
+        "lint": "npm run lint:js && npm run prettier:css && npm run lint:css",
+        "lint:js": "tsc --noEmit && eslint --fix src/**/*.{js,ts,tsx}",
+        "lint:css": "stylelint --formatter=verbose src/**/*.css",
+        "prettier:js": "prettier --write src/**/*.js",
+        "prettier:css": "prettier-stylelint --write src/**/*.css"
     },
     "browserslist": {
         "legacy": [
@@ -41,12 +46,12 @@
     "husky": {
         "hooks": {
             "pre-commit": "lint-staged",
-            "pre-push": "yarn test"
+            "pre-push": "npm run jest:coverage"
         }
     },
     "lint-staged": {
-        "*.(js|jsx)": [
-            "yarn lint",
+        "*.(js|ts|tsx)": [
+            "npm run lint",
             "git add"
         ]
     },
@@ -89,9 +94,12 @@
         "cache-loader": "^4.1.0",
         "classnames": "^2.2.6",
         "clean-webpack-plugin": "^3.0.0",
+        "codecov.io": "^0.1.6",
         "copy-webpack-plugin": "^5.1.1",
+        "coveralls": "^3.0.9",
         "cross-env": "^7.0.0",
         "css-loader": "^3.2.0",
+        "editorconfig-checker": "^3.0.4",
         "eslint": "^6.8.0",
         "eslint-config-airbnb": "^18.0.1",
         "eslint-config-node": "^4.0.0",
@@ -120,10 +128,15 @@
         "postcss-loader": "^3.0.0",
         "postcss-nested": "^4.1.2",
         "prettier": "^1.18.2",
+        "prettier-stylelint": "^0.4.2",
         "prop-types": "^15.7.2",
         "redux-devtools-extension": "^2.13.8",
         "source-map": "^0.7.3",
         "style-loader": "^1.0.0",
+        "stylefmt": "^6.0.3",
+        "stylelint": "^13.2.0",
+        "stylelint-config-standard": "^20.0.0",
+        "stylelint-order": "^4.0.0",
         "terser-webpack-plugin": "^2.3.4",
         "thread-loader": "^2.1.3",
         "ts-jest": "^25.2.1",
