--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -2,7 +2,7 @@ name: TESTS
 on: [pull_request]
 
 jobs:
-    lint:
+    tests:
         runs-on: ubuntu-latest
         strategy:
             matrix:
