--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
         "test": "npm run jest:coverage && npm run lint",
         "jest": "jest --verbose --passWithNoTests",
         "jest:watch": "npm run jest --watchAll",
-        "jest:coverage": "npm run jest --env=jsdom --coverage",
+        "jest:coverage": "jest --env=jsdom --coverage",
         "lint": "npm run lint:js && npm run prettier:css && npm run lint:css",
         "lint:js": "tsc --noEmit && eslint --fix src/**/*.{js,ts,tsx}",
         "lint:css": "stylelint --formatter=verbose src/**/*.css",
@@ -58,14 +58,14 @@
     "dependencies": {
         "@blueprintjs/core": "^3.23.1",
         "@reach/router": "^1.3.1",
-        "@yarnpkg/pnpify": "^2.0.0-rc.18",
         "babel-polyfill": "^6.26.0",
         "bootstrap": "^4.4.1",
         "normalize.css": "^8.0.1",
-        "react": "^16.12.0",
+        "react": "^16.13.0",
         "react-bootstrap": "^1.0.0-beta.16",
-        "react-dom": "^16.12.0",
+        "react-dom": "^16.13.0",
         "react-redux": "^7.1.3",
+        "react-router-dom": "^5.1.2",
         "redux": "^4.0.5",
         "redux-thunk": "^2.3.0"
     },
@@ -77,10 +77,10 @@
         "@babel/preset-react": "^7.0.0",
         "@babel/preset-typescript": "^7.6.0",
         "@testing-library/jest-dom": "^5.1.0",
-        "@testing-library/react": "^9.4.0",
+        "@testing-library/react": "^10.0.1",
         "@types/classnames": "^2.2.9",
         "@types/jest": "^25.1.3",
-        "@types/node": "^13.7.0",
+        "@types/node": "^13.9.1",
         "@types/reach__router": "^1.3.0",
         "@types/react": "^16.9.5",
         "@types/react-dom": "^16.9.1",
@@ -101,7 +101,7 @@
         "css-loader": "^3.2.0",
         "editorconfig-checker": "^3.0.4",
         "eslint": "^6.8.0",
-        "eslint-config-airbnb": "^18.0.1",
+        "eslint-config-airbnb": "^18.1.0",
         "eslint-config-node": "^4.0.0",
         "eslint-config-prettier": "^6.10.0",
         "eslint-import-resolver-node": "^0.3.3",
@@ -134,7 +134,7 @@
         "source-map": "^0.7.3",
         "style-loader": "^1.0.0",
         "stylefmt": "^6.0.3",
-        "stylelint": "^13.2.0",
+        "stylelint": "^13.2.1",
         "stylelint-config-standard": "^20.0.0",
         "stylelint-order": "^4.0.0",
         "terser-webpack-plugin": "^2.3.4",
@@ -142,7 +142,7 @@
         "ts-jest": "^25.2.1",
         "typescript": "^3.7.5",
         "webpack": "^4.41.6",
-        "webpack-bundle-analyzer": "^3.6.0",
+        "webpack-bundle-analyzer": "^3.6.1",
         "webpack-cli": "^3.3.9",
         "webpack-dev-server": "^3.8.2",
         "whatwg-fetch": "^3.0.0"
