--- a/package.json
+++ b/package.json
@@ -57,46 +57,46 @@
     },
     "dependencies": {
         "@blueprintjs/core": "^3.23.1",
-        "@reach/router": "^1.3.1",
         "babel-polyfill": "^6.26.0",
         "bootstrap": "^4.4.1",
         "normalize.css": "^8.0.1",
-        "react": "^16.13.0",
+        "react": "^16.13.1",
         "react-bootstrap": "^1.0.0-beta.16",
-        "react-dom": "^16.13.0",
+        "react-dom": "^16.13.1",
         "react-redux": "^7.1.3",
         "react-router-dom": "^5.1.2",
         "redux": "^4.0.5",
         "redux-thunk": "^2.3.0"
     },
     "devDependencies": {
-        "@babel/core": "^7.6.0",
+        "@babel/core": "^7.9.0",
         "@babel/plugin-proposal-class-properties": "^7.5.5",
-        "@babel/preset-env": "^7.6.0",
+        "@babel/preset-env": "^7.9.0",
         "@babel/preset-modules": "^0.1.3",
-        "@babel/preset-react": "^7.0.0",
-        "@babel/preset-typescript": "^7.6.0",
+        "@babel/preset-react": "^7.9.1",
+        "@babel/preset-typescript": "^7.9.0",
         "@testing-library/jest-dom": "^5.1.0",
         "@testing-library/react": "^10.0.1",
         "@types/classnames": "^2.2.9",
         "@types/jest": "^25.1.3",
-        "@types/node": "^13.9.1",
-        "@types/reach__router": "^1.3.0",
-        "@types/react": "^16.9.5",
+        "@types/node": "^13.9.2",
+        "@types/react": "^16.9.25",
         "@types/react-dom": "^16.9.1",
         "@types/react-redux": "^7.1.7",
         "@types/react-router-dom": "^5.1.3",
+        "@typescript-eslint/eslint-plugin": "^2.24.0",
+        "@typescript-eslint/parser": "^2.24.0",
         "autoprefixer": "^9.6.1",
         "babel-eslint": "^10.0.3",
         "babel-jest": "^25.1.0",
-        "babel-loader": "^8.0.6",
+        "babel-loader": "^8.1.0",
         "babel-plugin-react-css-modules": "^5.2.6",
         "cache-loader": "^4.1.0",
         "classnames": "^2.2.6",
         "clean-webpack-plugin": "^3.0.0",
         "codecov.io": "^0.1.6",
         "copy-webpack-plugin": "^5.1.1",
-        "coveralls": "^3.0.9",
+        "coveralls": "^3.0.11",
         "cross-env": "^7.0.0",
         "css-loader": "^3.2.0",
         "editorconfig-checker": "^3.0.4",
@@ -111,10 +111,10 @@
         "eslint-plugin-node": "^11.0.0",
         "eslint-plugin-prettier": "^3.1.2",
         "eslint-plugin-react": "^7.18.3",
-        "eslint-plugin-react-hooks": "^2.3.0",
+        "eslint-plugin-react-hooks": "^2.5.1",
         "eslint-plugin-sonarjs": "^0.5.0",
         "eslint-plugin-testing-library": "^2.2.3",
-        "file-loader": "^5.0.2",
+        "file-loader": "^5.1.0",
         "html-webpack-plugin": "^3.2.0",
         "husky": "^4.2.1",
         "jest": "^25.1.0",
