--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
         "start": "cross-env NODE_ENV=development BROWSERSLIST_ENV=modern webpack-dev-server --mode development --open",
         "start:legacy": "cross-env NODE_ENV=development BROWSERSLIST_ENV=legacy webpack-dev-server --mode development --open",
         "stats": "webpack --json > stats.json && webpack-bundle-analyzer stats.json",
-        "test": "npm run jest:coverage && npm run lint",
+        "test": "npm run jest && npm run lint",
         "jest": "jest --verbose --passWithNoTests",
         "jest:watch": "npm run jest --watchAll",
         "jest:coverage": "jest --env=jsdom --coverage",
