--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
         "lint:js": "tsc --noEmit && eslint --fix src/**/*.{js,ts,tsx}",
         "lint:css": "stylelint --formatter=verbose src/**/*.css",
         "prettier:js": "prettier --write src/**/*.js",
-        "prettier:css": "prettier-stylelint --write src/**/*.css"
+        "prettier:css": "prettier-stylelint --write -q src/**/*.css"
     },
     "browserslist": {
         "legacy": [
@@ -65,7 +65,7 @@
         "bootstrap": "^4.4.1",
         "normalize.css": "^8.0.1",
         "react": "^16.13.1",
-        "react-bootstrap": "^1.0.0-beta.16",
+        "react-bootstrap": "^1.0.0",
         "react-dom": "^16.13.1",
         "react-redux": "^7.1.3",
         "react-router-dom": "^5.1.2",
@@ -77,20 +77,20 @@
         "@babel/plugin-proposal-class-properties": "^7.5.5",
         "@babel/preset-env": "^7.9.0",
         "@babel/preset-modules": "^0.1.3",
-        "@babel/preset-react": "^7.9.1",
+        "@babel/preset-react": "^7.9.4",
         "@babel/preset-typescript": "^7.9.0",
         "@testing-library/jest-dom": "^5.1.0",
         "@testing-library/react": "^10.0.1",
         "@types/classnames": "^2.2.9",
         "@types/jest": "^25.1.3",
-        "@types/node": "^13.9.2",
+        "@types/node": "^13.9.3",
         "@types/react": "^16.9.25",
         "@types/react-dom": "^16.9.1",
         "@types/react-redux": "^7.1.7",
         "@types/react-router-dom": "^5.1.3",
-        "@typescript-eslint/eslint-plugin": "^2.24.0",
-        "@typescript-eslint/parser": "^2.24.0",
-        "autoprefixer": "^9.6.1",
+        "@typescript-eslint/eslint-plugin": "^2.25.0",
+        "@typescript-eslint/parser": "^2.25.0",
+        "autoprefixer": "^9.7.5",
         "babel-eslint": "^10.0.3",
         "babel-jest": "^25.1.0",
         "babel-loader": "^8.1.0",
@@ -107,7 +107,7 @@
         "eslint": "^6.8.0",
         "eslint-config-airbnb": "^18.1.0",
         "eslint-config-node": "^4.0.0",
-        "eslint-config-prettier": "^6.10.0",
+        "eslint-config-prettier": "^6.10.1",
         "eslint-import-resolver-node": "^0.3.3",
         "eslint-loader": "^3.0.3",
         "eslint-plugin-import": "^2.20.1",
@@ -123,7 +123,7 @@
         "husky": "^4.2.1",
         "jest": "^25.1.0",
         "jest-css-modules": "^2.1.0",
-        "lint-staged": "^10.0.7",
+        "lint-staged": "^10.0.9",
         "mini-css-extract-plugin": "^0.9.0",
         "optimize-css-assets-webpack-plugin": "^5.0.3",
         "pnp-webpack-plugin": "^1.6.0",
@@ -145,7 +145,7 @@
         "thread-loader": "^2.1.3",
         "ts-jest": "^25.2.1",
         "typescript": "^3.7.5",
-        "webpack": "^4.41.6",
+        "webpack": "^4.42.1",
         "webpack-bundle-analyzer": "^3.6.1",
         "webpack-cli": "^3.3.9",
         "webpack-dev-server": "^3.8.2",
