--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
         "react-bootstrap": "^1.0.0",
         "react-dom": "^16.13.1",
         "react-redux": "^7.1.3",
+        "react-responsive": "^8.0.3",
         "react-router-dom": "^5.1.2",
         "redux": "^4.0.5",
         "redux-thunk": "^2.3.0"
@@ -87,6 +88,7 @@
         "@types/react": "^16.9.25",
         "@types/react-dom": "^16.9.1",
         "@types/react-redux": "^7.1.7",
+        "@types/react-responsive": "^8.0.2",
         "@types/react-router-dom": "^5.1.3",
         "@typescript-eslint/eslint-plugin": "^2.25.0",
         "@typescript-eslint/parser": "^2.25.0",
