--- a/.editorconfig
+++ b/.editorconfig
@@ -9,7 +9,7 @@ trim_trailing_whitespace = true
 insert_final_newline = true
 max_line_length = 120
 
-[*.{js,jsx,ts,tsx,css,less}]
+[*.{js,jsx,ts,tsx,css}]
 indent_style = space
 indent_size = 4
 
