--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
         "lint:js": "tsc --noEmit && eslint --fix src/**/*.{js,ts,tsx}",
         "lint:css": "stylelint --formatter=verbose src/**/*.css",
         "prettier:js": "prettier --write src/**/*.js",
-        "prettier:css": "prettier-stylelint --write -q src/**/*.css"
+        "prettier:css": "prettier --write src/**/*.css"
     },
     "browserslist": {
         "legacy": [
@@ -133,16 +133,18 @@
         "postcss-custom-media": "^7.0.8",
         "postcss-loader": "^3.0.0",
         "postcss-nested": "^4.1.2",
-        "prettier": "^1.18.2",
-        "prettier-stylelint": "^0.4.2",
+        "prettier": "^2.0.2",
         "prop-types": "^15.7.2",
         "redux-devtools-extension": "^2.13.8",
         "source-map": "^0.7.3",
         "style-loader": "^1.0.0",
         "stylefmt": "^6.0.3",
         "stylelint": "^13.3.0",
+        "stylelint-config-prettier": "^8.0.1",
+        "stylelint-config-recommended": "^3.0.0",
         "stylelint-config-standard": "^20.0.0",
         "stylelint-order": "^4.0.0",
+        "stylelint-prettier": "^1.1.2",
         "terser-webpack-plugin": "^2.3.4",
         "thread-loader": "^2.1.3",
         "ts-jest": "^25.3.1",
