--- a/package.json
+++ b/package.json
@@ -50,8 +50,14 @@
         }
     },
     "lint-staged": {
-        "*.(js|jsx|ts|tsx|css)": [
-            "npm run lint",
+        "*.(js|jsx|ts|tsx)": [
+            "eslint --cache --fix",
+            "prettier --write",
+            "git add"
+        ],
+        "*.(css)": [
+            "stylelint --formatter=verbose",
+            "prettier --write",
             "git add"
         ]
     },
