--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
         "react-responsive": "^8.0.3",
         "react-router-dom": "^5.1.2",
         "redux": "^4.0.5",
+        "redux-persist": "^6.0.0",
         "redux-thunk": "^2.3.0"
     },
     "devDependencies": {
@@ -128,6 +129,7 @@
         "husky": "^4.2.1",
         "jest": "^25.2.7",
         "jest-css-modules": "^2.1.0",
+        "json-server": "^0.16.1",
         "lint-staged": "^10.1.1",
         "mini-css-extract-plugin": "^0.9.0",
         "optimize-css-assets-webpack-plugin": "^5.0.3",
