--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
     },
     "homepage": "https://github.com/dobernike/my_finances#readme",
     "scripts": {
-        "dev": "cross-env NODE_ENV=development webpack --mode development",
         "build": "npm run build:legacy && npm run build:modern",
         "build:legacy": "cross-env NODE_ENV=production BROWSERSLIST_ENV=legacy webpack --mode production",
         "build:modern": "cross-env NODE_ENV=production BROWSERSLIST_ENV=modern webpack --mode production",
+        "start": "cross-env NODE_ENV=development concurrently \"npm run server\" \"npm run dev\"",
+        "start:legacy": "cross-env NODE_ENV=development concurrently \"npm run server\" \"npm run dev:legacy\"",
+        "dev": "cross-env BROWSERSLIST_ENV=modern webpack-dev-server --mode development --open",
+        "dev:legacy": "cross-env BROWSERSLIST_ENV=legacy webpack-dev-server --mode development --open",
         "watch": "cross-env NODE_ENV=development webpack --mode development --watch",
-        "start": "cross-env NODE_ENV=development BROWSERSLIST_ENV=modern webpack-dev-server --mode development --open",
-        "start:legacy": "cross-env NODE_ENV=development BROWSERSLIST_ENV=legacy webpack-dev-server --mode development --open",
+        "server": "json-server -p3001 --watch db.json",
         "stats": "webpack --json > stats.json && webpack-bundle-analyzer stats.json",
         "test": "npm run jest:coverage && npm run lint",
         "jest": "jest --verbose --passWithNoTests",
@@ -105,6 +107,7 @@
         "classnames": "^2.2.6",
         "clean-webpack-plugin": "^3.0.0",
         "codecov.io": "^0.1.6",
+        "concurrently": "^5.2.0",
         "copy-webpack-plugin": "^5.1.1",
         "coveralls": "^3.0.11",
         "cross-env": "^7.0.0",
