--- a/package.json
+++ b/package.json
@@ -77,7 +77,9 @@
         "react-router-dom": "^5.1.2",
         "redux": "^4.0.5",
         "redux-persist": "^6.0.0",
-        "redux-thunk": "^2.3.0"
+        "redux-saga": "^1.1.3",
+        "redux-thunk": "^2.3.0",
+        "reselect": "^4.0.0"
     },
     "devDependencies": {
         "@babel/core": "^7.9.0",
