--- a/package.json
+++ b/package.json
@@ -53,13 +53,11 @@
     },
     "lint-staged": {
         "*.(js|jsx|ts|tsx)": [
-            "eslint --cache --fix",
-            "prettier --write",
+            "eslint --fix",
             "git add"
         ],
         "*.(css)": [
             "stylelint --formatter=verbose",
-            "prettier --write",
             "git add"
         ]
     },
